# beerio

./: .gitignore  Cargo.toml  README.md  Trunk.toml  flake.nix  index.css  index.html  justfile  leptosfmt.toml  missions.toml  rules.csv  tailwind.config.js
.cargo/: config.toml
.github/workflows/: deploy_leptos_to_pages.yml  deploy_via_nix_to_page.yml  leptos_deploy_to_pages.yml  test_deploy.yml
client/: Cargo.toml  rules.toml
client/src/: lib.rs  pages.rs
client/src/components/: layout.rs  mission.rs  random.rs
client/src/pages/: mission_pages.rs  seed_form.rs
server/: Cargo.toml
server/src/: fileserv.rs  main.rs
src/: app.rs  components.rs  lib.rs  main.rs  pages.rs
src/components/: css.rs  item_display.rs  item_toggle.rs  layout.module.css  layout.rs  mission.rs  mission_view.rs  random.rs  random_item_display.rs  rule.rs  rule_display.rs  seed_form.rs
src/pages/: mission_pages.rs  random_page.rs  rules_display.rs  seed_display.rs  seed_form.rs  seed_view.rs  splash_page.rs
style/: tailwind.css
