[package]
name = "beerio"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
getrandom = { version = "0.3.2", features = ["wasm_js"] }
leptos = { version = "0.7.8", features = ["csr"] }
log = "0.4.27"
rand = "0.9.0"
rand_chacha = "0.9.0"
sha2 = "0.10.8"
