[workspace.dependencies]
leptos = { version = "0.7.3", features = ["nightly"] }
leptos_meta = { version = "0.7.3"}
leptos_router = { version = "0.7.3", features = ["nightly"] }
leptos_axum = { version = "0.7.3" }

axum = "0.7"
cfg-if = "1"
console_error_panic_hook = "0.1.7"
console_log = "1"
http = "1"
log = "0.4.20"
simple_logger = "5.0.0"
thiserror = "2.0.11"
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
wasm-bindgen = "=0.2.100"

getrandom = { version = "0.3.2", features = ["wasm_js"] }
hex = "0.4.3"
rand = "0.9.0"
rand_chacha = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
toml = "0.8.20"

[workspace]
resolver = "2"
members = ["client", "server"]

# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[[workspace.metadata.leptos]]
# this name is used for the wasm, js and css file names
name = "beerio"

# the package in the workspace that contains the server binary (binary crate)
bin-package = "server"

# the package in the workspace that contains the frontend wasm binary (library crate)
lib-package = "client"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"
tailwind-input-file = "style/tailwind.css"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
