[package]
name = "beerio"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
getrandom = { version = "0.3.2", features = ["wasm_js"] }
hex = "0.4.3"
icondata = "0.5.0"
leptos = { version = "0.7.8", features = ["csr", "nightly"] }
leptos_icons = "0.5.0"
leptos_router = { version = "0.7.8", features = ["nightly"] }
log = "0.4.27"
rand = "0.9.0"
rand_chacha = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
toml = "0.8.20"
