[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true, features = ["hydrate"] }
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true

getrandom.workspace = true
hex.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
sha2.workspace = true
toml.workspace = true
log.workspace = true
console_log.workspace = true
console_error_panic_hook.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]

